Step3-Service-Ingress/ingress/docker-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: greet-nodeport-1
spec:
  type: NodePort
  ports:
  - port: 30000
    targetPort: 8080
    nodePort: 30000
  selector:
    app: greet
    ver: 1.0.2
---
apiVersion: v1
kind: Service
metadata:
  name: greet-nodeport-2
spec:
  type: NodePort
  ports:
  - port: 30001
    targetPort: 8080
    nodePort: 30001
  selector:
    app: greet
    ver: 1.0.3

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: greet-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    kubernetes.io/ingress.allow-http: "true"
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - http:
      paths:
      - path: /v1/(.*)
        backend:
          serviceName: greet-nodeport-1
          servicePort: 30000
      - path: /v2/(.*)
        backend:
          serviceName: greet-nodeport-2
          servicePort: 30001
