Step3-Service-Ingress/ingress/gcp-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: greet-nodeport-1
spec:
  type: NodePort
  ports:
  - port: 30000
    targetPort: 8080
    nodePort: 30000
  selector:
    app: greet
    ver: 1.0.2
---
apiVersion: v1
kind: Service
metadata:
  name: greet-nodeport-2
spec:
  type: NodePort
  ports:
  - port: 30001
    targetPort: 8080
    nodePort: 30001
  selector:
    app: greet
    ver: 1.0.3

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: greet-ingress
  annotations:
    kubernetes.io/ingress.allow-http: "true"
spec:
  rules:
  - http:
      paths:
      - path: /*
        backend:
          serviceName: greet-nodeport-1
          servicePort: 30000
      - path: /v2/*
        backend:
          serviceName: greet-nodeport-2
          servicePort: 30001
